--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
 @font-face {
     font-family: 'Nemesys';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 800;
     src: url('./fonts/Nemesys Regular.ttf') format('woff');
 }
 
@@ -48,7 +48,7 @@
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-    color: var(--white);
+    color: var(--black);
     text-align: justify;
 }
 
@@ -57,8 +57,8 @@
     --font-size-normal: 2.2rem;
     --font-size-medium: 2.8rem;
     --font-size-medium-1: 3.6rem;
-    --font-size-large: 5.5rem;
-    --font-size-huge: 7.5rem;
+    --font-size-large: 5rem;
+    --font-size-huge: 7rem;
     --font-stack: 'Hk Grotesk', sans-serif;
 
     --line-height-normal: 1.7;
@@ -85,7 +85,6 @@
 
 html {
     font-size: 62.5%; /* (16/10)*100 = 62.5% => 1rem = 10px */
-    scroll-behavior: smooth;
 }
 
 @media(max-width: 1000px) {
@@ -106,6 +105,24 @@ body {
 .row {
     max-width: var(--container-max-width);
     margin: 0 auto;
+}
+
+.structure {
+    max-width: 985px;
+    margin: auto;
+}
+
+.content {
+    background: var(--white);
+    scroll-behavior: smooth;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+}
+
+.scrollSection {
+    height: 100vh;
+    background-size:  cover;
+    scroll-snap-align: start;
 }
 
 @media(max-width: 1340px) {
@@ -147,12 +164,8 @@ img {
 /* --------------------------------------- */
 
 h1 {
-    color: var(--black);
-    background: var(--white);
-    display: inline;
+    color: var(--white);
     font-family: 'Nemesys', sans-serif;
-    border-top : 10px solid var(--orange);
-
 }
 
 h2 {
@@ -172,25 +185,8 @@ h3 {
     margin-bottom: var(--gutter-small);
 }
 
-.heading-primary {
-    line-height: 1;
-    font-size: 15rem;
-    font-weight: 400;
-}
-
-@media(max-width: 900px) {
-    .heading-primary {
-        font-size: 6.5rem;
-    }
-}
-
-
-
 
 @media(max-width: 500px) {
-    .heading-primary {
-        font-size: var(--font-size-large);
-    }
 
     h2 {
         font-size: var(--font-size-medium-1);
@@ -232,10 +228,6 @@ a:focus {
     outline: 2px solid var(--orange);
 }
 
-body:not(.user-is-tabbing) button:focus,
-body:not(.user-is-tabbing) a:focus {
-    outline: none;
-}
 
 .link:hover {
     color: var(--orange);
@@ -263,7 +255,7 @@ body:not(.user-is-tabbing) a:focus {
     top: 0;
     left: 0;
     right: 100%;
-    background: var(--white);
+    background: var(--black);
     height: 100%;
     z-index: -1;
     transition: all 0.2s cubic-bezier(1, 0.68, 0.16, 0.9);
@@ -288,7 +280,7 @@ body:not(.user-is-tabbing) a:focus {
 
 .btn_Full:hover,
 .btn_Full:focus {
-    background: var(--white);
+    background: var(--black);
     color: var(--orange);
 }
 
@@ -335,16 +327,15 @@ body:not(.user-is-tabbing) a:focus {
 
 .nav {
     position: fixed;
-    right: 2%;
-    display: inline;
     background: var(--white);
     height: 100%;
     align-content: flex-start;
+    margin-left: -50px;
 }
 
 .nav__items {
     list-style: none;
-    padding-top: 20px;
+    padding-top: 0px;
 }
 
 .nav__item{
@@ -394,17 +385,35 @@ body:not(.user-is-tabbing) a:focus {
 /* --------------------------------------- */
 
 .header {
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    font-size: var(--font-size-normal);
+    background-color: var(--black);
 }
 
 .header__text {
-    padding-top: 10%;
+
 }
 
+.heading-primary {
+    display: block;
+    font-size: 10.5em;
+    color: var(--white);
+}
+
+.heading-secondary{
+    color: var(--orange);
+}
+
+.second-name {
+    margin-top: -0.95em;
+    color: var(--white);
+}
+
+.second-name::after{
+    content: '';
+    display: block;
+    height: 10px;
+    background-color: var(--orange);
+    margin-top: -0.55em;
+}
 
 /* --------------------------------------- */
 /* ----- Work ----- */
@@ -475,31 +484,6 @@ body:not(.user-is-tabbing) a:focus {
     }
 }
 
-/* --------------------------------------- */
-/* ----- Clients ----- */
-/* --------------------------------------- */
-
-.client__logos {
-    display: flex;
-    justify-content: space-between;
-    filter: invert(100%) grayscale(100%) opacity(.8);
-}
-
-.client__logo {
-    height: 6.5rem;
-    max-width: 18rem;
-}
-
-@media(max-width: 1240px) {
-    .client__logos {
-        overflow-x: scroll;
-        padding: var(--gutter-normal);
-    }
-
-    .client__logo:not(:last-of-type) {
-        margin-right: var(--gutter-medium);
-    }
-}
 
 /* --------------------------------------- */
 /* ----- About ----- */
