--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@
 
     --black: #22252e;
     --orange: #f5630d;
-    --white: #fef2e4;
+    --white: #f1ece3;
     --transparent: rgba(0, 0, 0, 0);
 
     --container-max-width: 1180px;
@@ -153,7 +153,7 @@ h3 {
 h4 {
     text-align: center;
     font-family: 'Sqeron', sans-serif;
-    font-size: 25px;
+    font-size: 50px;
     color: var(--black);
 }
 
@@ -369,24 +369,34 @@ a:focus {
 /* --------------------------------------- */
 
 .about__content {
-    margin: 20px;
+    margin: 0 0 0 20px;
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
 .about__box {
     border: var(--border1);
     align-self: flex-start;
-    flex: 0 0 40%;
+    margin: 0 20px 0 20px;
 }
 
 .about__text {
     margin: 0 5px 0 5px;
 }
 
+.ConsoleImage {
+    width: 200px;
+    filter: grayscale(100%);
+}
+
 .about__photo {
-    height: 50rem;
+    min-width: 350px;
+    width: 350px;
+    height: 710px;
     border: var(--border1);
+    object-fit: cover;
+    
 }
 
 /* --------------------------------------- */
@@ -395,6 +405,8 @@ a:focus {
 
 .ProjectTitle {
     background-color: var(--black);
+    position: sticky;
+    top: 0;
 }
 .ProjectTitle::before{
     content: '';
@@ -440,25 +452,50 @@ a:focus {
 
 .ProjectMainContent {
     display: flex;
-    align-items: flex-start;
     margin: 20px;
 }
 
 .ProjectBanner {
-    min-width: 400px;
-    width: 400px;
+    min-width: 350px;
+    width: 350px;
     height: 710px;
+    object-fit: cover;
     border: var(--border1);
 }
 
 .ProjectSecondContent {
     display: flex;
     flex-direction: column;
+    margin: 0 20px 0 20px;
+    justify-content: space-between;
 }
 
 .ProjectDescription {
     text-align: left;
-    margin-left: 20px;
+}
+
+.PegiAndYoutube {
+    display: flex;
+    border: var(--border1);
+    flex-direction: column;
+}
+
+.PegiIconsContainer {
+    background-color: var(--orange);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.PegiIcon {
+    height: 60px;
+    margin: 4px;
+}
+
+.ProjectYoutubeLink {
+    height: 305px;
+    border: var(--border1);
 }
 
 .PositionContent{
@@ -475,6 +512,7 @@ a:focus {
  .ProjectPosition {
      padding: 5px;
  }
+ 
  
 
 
